# genai-test-task

./: .gitignore  README.md
news-assistant/: .env  README.md  config.yaml  pyproject.toml
news-assistant/news_assistant/: main.py
news-assistant/news_assistant/ai/: openai.py
news-assistant/news_assistant/persistence/: chroma_db.py
news-assistant/news_assistant/utils/: config_loader.py
news-assistant/news_assistant/web_scraping/: tsn.py
news-assistant/news_assistent/: main.py
news-assistant/news_assistent/ai/: openai.py
news-assistant/news_assistent/model/: article.py
news-assistant/news_assistent/persistence/: chroma_db.py
news-assistant/news_assistent/resources/: urls.txt
news-assistant/news_assistent/web_scraping/: tsn.py
news-assistent/: pyproject.toml
