[tool.poetry]
name = "news-assistant"
version = "0.1.0"
description = ""
authors = ["Ievgenii Zhmur <i.am.zhmur@gmail.com>"]
readme = "README.md"

packages = [
    { include = "news_assistant" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
langchain = "^0.3.25"
openai = "^1.88.0"
langchain-community = "^0.3.25"
langchain-openai = "^0.3.24"
chromadb = "^1.0.13"
sentence-transformers = "^2.5.1"
python-dotenv = "^1.1.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "news_assistant.main:main"
